Fix string formatting using String.formatted() and register missing localization keys